legacy/test/validate/metadata/test_case/invalid/invalid_metadata_py_missing_type.py

# === OmniNode:Metadata ===
# metadata_version: "0.1"
# schema_version: "1.0.0"
# name: "invalid_metadata_py_missing_type"
# namespace: "omninode.tools.invalid_metadata_py_missing_type"
# meta_type: "model"
# version: "0.1.0"
# author: "OmniNode Team"
# owner: "jonah@omninode.ai"
# copyright: "Copyright (c) 2025 OmniNode.ai"
# created_at: "2025-05-05T22:11:58+00:00"
# last_modified_at: "2025-05-05T22:11:58+00:00"
# entrypoint: "invalid_metadata_py_missing_type.py"
# protocols_supported:
#   - "["O.N.E. v0.1"]"
# protocol_class:
#   - '[]'
# base_class:
#   - '[]'
# mock_safe: true
# === /OmniNode:Metadata ===






class Example:
    pass 